@@ -4,12 +4,19 @@
 
 ### Installation
 
+* Download [JavaFX](https://gluonhq.com/products/javafx/)
+
 ### Beispiel starten
 
 * Pfad zu JavaFX exportieren
   ```
   export PATH_TO_FX=/Users/cleancoderocker/eclipse-workspace/schroedinger-programmiert-java/javafx-sdk-11.0.2/lib
   ```
+  (Linux/Mac)
+  ```
+  set PATH_TO_FX="/Users/cleancoderocker/eclipse-workspace/schroedinger-programmiert-java/javafx-sdk-11.0.2/lib"
+  ```
+  (Windows)
 
 * JavaFX-Anwendung kompilieren
   ```
@@ -19,6 +26,15 @@
     --add-modules javafx.controls,javafx.fxml \
     src/de/galileocomputing/schroedinger/java/kapitel16/javafx/schuhe/*.java
   ```
+  (Linux/Mac)
+  ```
+  javac \
+    -d bin \
+    --module-path %PATH_TO_FX% \
+    --add-modules javafx.controls,javafx.fxml \
+    src/de/galileocomputing/schroedinger/java/kapitel16/javafx/schuhe/*.java
+  ```
+  (Windows)
 
 * JavaFX-Anwendung ausführen
   ```
@@ -28,3 +44,12 @@
     --add-modules javafx.controls \
     de.galileocomputing.schroedinger.java.kapitel16.javafx.schuhe.SchuhKartonVolumenBerechnerGUI
   ```
+  (Linux/Mac)
+  ```
+  java \
+    -cp bin \
+    --module-path %PATH_TO_FX% \
+    --add-modules javafx.controls \
+    de.galileocomputing.schroedinger.java.kapitel16.javafx.schuhe.SchuhKartonVolumenBerechnerGUI
+  ```
+  (Windows)
